runcode com.fs.starfarer.api.impl.campaign.econ.impl.courierPort.intel.ShippingIntel.removeAll();

Embassy
Fixed - Weird copy-paste typo in description (how did that even happen)

Artillery
Adjusted - Railgun charge up 3s -> 5s
Adjusted - Railgun damage 8000 -> 3000
Adjusted - Railgun now fires a 3-shot burst
Adjusted - Railgun shot interval 3s -> 10s
Adjusted - Watchtower hack duration now actually up to 2 months (Was 1)
Fixed - Watchtowers no longer permanently have the first faction they spawned under in their name (new game)

3.1.c
General
Added - Better Colonies SP-Improvement Config data

Items
Fixed - Refreshing market no longer updates consumable item presence
Fixed - Consumables no longer vanish from storage

Artillery Stations
Adjusted - S-Point improvement now increases range by 4000
Adjusted - Tracking distance on missiles 400 -> 800 SU
Adjusted - Missile speed 200 -> 250 SU/s
Adjusted - Slightly decreased railgun projectile travel time
Fixed - Nex colony fleets now auto-destroy the artillery when establishing a colony

Research Projects
Fixed - New Projects intel is no longer perma-important (does not fix currently stuck intel entries, sorry!)

World Wonders
Added - Toggle to switch between alternate visuals (if present)

3.1.b
General
Fixed - CTD on new game

3.1.a
General
Added - President Matt Damon added to credits of this mod for help with vectors and math. Thank you!
Fixed - Corrected all those getList tooltips to get

Items
Added - Consumable Item: Nanite Repair Module - Repairs your fleet, restores CR
Added - Consumable Item: Tech Locator - Grav Scan for hyperspace, indicates systems with lots of loot
Added - Consumable Item: Drive Bubble Spike - Deploys a mine that fires an interdiction pulse when an enemy fleet is in range
Added - Consumable Item: Sensor Decoy - Attracts military fleets in a large radius, baits artillery fire
Added - Consumable Item: Fuel Scoop - Succs juicy space fuel from a nearby star or nebula