@@ -145,6 +145,17 @@
 		"pluginClass":"com.fs.starfarer.api.artilleryStation.station.IndEvo_WatchtowerEntityPlugin"
 	},
 
+	"IndEvo_Eye":{
+	"defaultRadius":75, # used if radius<0 in addCustomEntity()
+	"showInCampaign":false, # show in campaign layer
+	"showIconOnMap":false,
+	"showNameOnMap":false,
+	"renderCircleIndicator":false, # make clickable
+	"layers":[ABOVE], # what layer(s) to render in. See CampaignEngineLayers.java for possible values,
+	"tags":["IndEvo_eye"],
+	"pluginClass":"com.fs.starfarer.api.artilleryStation.station.IndEvo_WatchtowerEyeIndicator"
+	},
+
 	"IndEvo_tempIndicator":{
 		"defaultRadius":10, # used if radius<0 in addCustomEntity()
 		"icon":"graphics/fx/IndEvo_danger_notif.png",
